# QuadGNSS-Sim

./: .gitattributes  .gitignore  CDMA_PROVIDERS.md  CMakeLists.txt  COMPLETE_DELIVERABLES.md  DEPLOYMENT.md  DEVELOPMENT_STATUS.md  FINAL_DELIVERY.md  FREQUENCY_ANALYSIS.md  GLONASS_FDMA_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAIN_LOOP_IMPLEMENTATION.md  Makefile  Makefile.interface  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  README.md  create_test_rinex.py  debug_rinex.cpp  run_simulation.sh  run_single_constellation.sh  transmit_quad.sh
data/: .gitkeep
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FREQUENCY_ANALYSIS.md  GITHUB_SETUP.md  archive
include/: getopt.h  multi_gnss_sim.h  quad_gnss_interface.h  rinex_parser.h
src/: cdma_integration_demo.cpp  cdma_providers.cpp  demonstration.cpp  getopt.c  glonass_provider.cpp  interface_test.cpp  main.c  main.cpp  multi_gnss_sim.c  quad_gnss_test.cpp  quadgnss_architecture_demo.cpp  rinex_parser.cpp  test.c  test_cdma_implementation.cpp  test_cdma_providers.cpp  test_complete_quadgnss.cpp  test_glonass_fdma.cpp  test_main_config.cpp  test_overflow_protection.cpp  test_rinex_parsing.cpp
src/constellation/: beidou.c  galileo.c  glonass.c  gps.c
src/sdr/: sdr_interface.c
src/utils/: config_parser.c  getopt_impl.c  math_utils.c  time_utils.c
